samples/_failures_safe/1761125419_1e954d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57261b07.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_57261b07.c:142:13: error: expected expression at end of input
  142 |             for (int j = 0; j <
      |             ^~~
./samples/SAFE/__tmp_57261b07.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57261b07.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57261b07.c:142:13: error: expected declaration or statement at end of input
